@@ -79,6 +79,8 @@ dpkg (1.17.2) UNRELEASED; urgency=low
     cause a segfault in case the function returns 0 entries.
   * Always return from ensure_statoverrides() if file is NULL, otherwise
     we might get us to read garbage from memory or segfault.
+  * Add new symlink_to_dir command to dpkg-maintscript-helper. Closes: #720712
+    Based on a patch by Bastien ROUCARIÈS <roucaries.bastien@gmail.com>.
 
   [ Updated programs translations ]
   * German (Sven Joachim).
